# codexmcp

./: PROMPT.md  README.md  pyproject.toml
src/codexmcp/: __init__.py  cli.py  server.py
