[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "codexmcp"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.20.0",
    "pydantic>=2.0",
]

[project.scripts]
codexmcp = "codexmcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codexmcp"]

[tool.hatch.build.targets.sdist]
include = ["src/codexmcp"]
